--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 	<title>Burgers</title>
 </head>
 <body>
 	{{{ body }}}
 </body>
+</html>
