--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
-<div class="center"><h1>Eat This Burger?</h1></div>
+<div class="center"><h1>Is it Burger Time?</h1></div>
+<div class="center"><img src="../burger.jpg" alt="burger"</div>
 
 <div id="uneaten">
  <h2>Uneaten</h2>
